--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,6 @@ html {
 	align-items: center;
 	justify-content: center;
 	width: 100%;
+	color-scheme: light !important;
+	color: black;
 }
-/* 
-h1 {
-	font-size: 20px !important;
-	font-weight: bold !important;
-}
-
-h2 {
-	font-size: 18px !important;
-	font-weight: bold !important;
-} */
